@@ -1,3 +1,10 @@
+Mon Jun 17 17:44:31 2013  Benoit Daloze  <eregontp@gmail.com>
+
+	* gc.c (ObjectSpace): is a module not a class.
+
+	* ext/objspace/objspace.c: try to include overview in rdoc,
+	  see #8537.
+
 Mon Jun 17 17:38:24 2013  Benoit Daloze  <eregontp@gmail.com>
 
 	* gc.c: fix example of ObjectSpace.define_finalizer in overview
